@@ -5,3 +5,7 @@ from trytond.model.exceptions import ValidationError
 
 class DuplicateError(ValidationError):
     pass
+
+
+class PromotionCouponNumberDatesError(ValidationError):
+    pass
