@@ -4,4 +4,6 @@ this repository contains the full copyright notices and license terms. -->
 <tree>
     <field name="coupon" expand="1"/>
     <field name="number" expand="1"/>
+    <field name="start_date" optional="1"/>
+    <field name="end_date" optional="1"/>
 </tree>
