@@ -1,3 +1,5 @@
+* Allow reuse coupon number
+* Add validity dates to coupon number
 
 Version 7.2.0 - 2024-04-29
 --------------------------
